fix collapsible content line break and wrap

--- a/app/assets/stylesheets/collapsible.css
+++ b/app/assets/stylesheets/collapsible.css
@@ -15,6 +15,8 @@
   font-size: 35px;
   align-items: center;
   color: black;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .collapsible-title {
@@ -36,7 +38,8 @@
 }
 
 .expandable-box-container .collapsible-content.open {
-  max-height: 400px;
+  max-height: 600px;
+  white-space: pre-line;
 }
 
 .arrow-down-close {
